# rust-demo

./: .gitignore  Cargo.toml  README.md  package.json
script/: clear_dir.ts  git_sync.ts
src/: README.md  main.rs
