[package]
name = "rust-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
ferris-says = "0.3.2"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "01_variables_and_types"
path = "src/bin/01_variables_and_types.rs"

[[bin]]
name = "02_functions"
path = "src/bin/02_functions.rs"

[[bin]]
name = "03_control_flow"
path = "src/bin/03_control_flow.rs"

[[bin]]
name = "04_ownership"
path = "src/bin/04_ownership.rs"

[[bin]]
name = "05_structs"
path = "src/bin/05_structs.rs"

[[bin]]
name = "06_enums_pattern_matching"
path = "src/bin/06_enums_pattern_matching.rs"

[[bin]]
name = "07_collections"
path = "src/bin/07_collections.rs"

[[bin]]
name = "08_packages_and_modules"
path = "src/bin/08_packages_and_modules.rs"

[[bin]]
name = "09_error_handling"
path = "src/bin/09_error_handling.rs"

[[bin]]
name = "10_generics"
path = "src/bin/10_generics.rs"

[[bin]]
name = "11_traits"
path = "src/bin/11_traits.rs"

[[bin]]
name = "12_lifetimes"
path = "src/bin/12_lifetimes.rs"
